@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2011,v 1.818 2011/04/04 08:02:12 manu Exp $
+$NetBSD: CHANGES-2011,v 1.819 2011/04/04 08:30:29 manu Exp $
 
 Changes to the packages collection and infrastructure in 2011:
 
@@ -1380,3 +1380,4 @@ Changes to the packages collection and infrastructure in 2011:
 	Updated emulators/suse113_libxml2 to 11.3nb2 [chs 2011-04-03]
 	mk/bsd.pkg.mk: freeze ended for pkgsrc-2011Q1 branch [wiz 2011-04-03]
 	Added textproc/p5-XML-Entities-1.0000 [manu 2011-04-04]
+	Updated security/lasso to 2.3.5 [manu 2011-04-04]
